--- a/frontend/src/Styles/App.css
+++ b/frontend/src/Styles/App.css
@@ -1,27 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap");
+
 html,
 body,
 #root,
 .app,
 .content {
-  height: 100%;
-  width: 100%;
-  font-family: "Poppins", sans-serif;
-  margin: 0;
+  font-family: "Source Sance Pro", sans-serif;
 }
 
-.app {
-  display: flex;
-  position: relative;
-}
-
-/* Scrollbar */
 ::-webkit-scrollbar {
-  width: 0.5rem;
+  width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #e0e0e0;
 }
 
 /* Handle */
